# cogito-ergo

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  COMPLIANCE-DRAFT.md  CONTRIBUTING.md  README.md  STATUS.md  WRITEUP-LONGMEMEVAL-20260423.md  agents.md  llms.txt  pyproject.toml
.github/workflows/: ci.yml
bench/: BENCHMARK_INTEGRITY_AUDIT.md  RESULTS-SUMMARY.md  VALIDATION_PACK.md  analyze_thresholds.py  cases.json  claude_code_session_eval.py  claude_code_user_eval.py  eval.py  eval_cases.json  longmemeval_combined_pipeline_flagship.py  longmemeval_combined_pipeline_v31.py  longmemeval_combined_pipeline_v32.py  longmemeval_combined_pipeline_v33.py  longmemeval_combined_pipeline_v33_ablate.py  longmemeval_combined_pipeline_v34.py  longmemeval_queryexp.py  longmemeval_scaffold_pref.py  longmemeval_scaffold_temporal.py  qa_eval.py  qa_eval_runJ-v33.json  qa_eval_v2_runP-v35_qwen-max_top5_regraded.json  qa_eval_v3_routing.py  qwen_native_arena.py  qwen_native_arena_results.md  r5_ceiling_diagnostic.md  results-guard-2026-04-17.json  results-multiquery-2026-04-15.json  results-tuned-2026-04-15.json  run_ablations.py  scaffold_arena.py  scaffold_arena_results.md  scaffold_arena_round2.py  scaffold_arena_round2_results.md  scaffold_transfer_validation.md  scaffold_transfer_validation.py  scaffold_transfer_validation_raw.json  sweep_underperformance_diagnosis.md
bench/phase-6/: flagship_escalation.py
bench/runs/: claude_code_user_eval.json
bench/runs/runC-guard/: aggregate.json  per_question.json
bench/runs/runD-temporal/: per_question.json
bench/runs/runE-pref/: per_question.json
bench/runs/runF-queryexp/: per_question.json
bench/runs/runH-v31/: per_question.json
bench/runs/runI-v32/: per_question.json
bench/runs/runJ-v33/: aggregate.json  per_question.json
bench/runs/runK-ablate-tempboost/: per_question.json
bench/runs/runO-runtime-escalate/: aggregate.json  per_question.json
bench/runs/runP-v35/: aggregate.json  per_question.json
bench/runs/smoke-D-temporal/: aggregate.json  per_question.json
bench/runs/smoke-ablate-test/: aggregate.json  per_question.json
bench/runs/smoke-guard/: per_question.json
bench/runs/smoke-qa/: per_question.json
bench/runs/smoke-v31/: aggregate.json  per_question.json
bench/runs/smoke-v32/: aggregate.json  per_question.json
bench/runs/smoke-v33/: aggregate.json  per_question.json
docs/: DISPATCHER_DESIGN.md  GENERALIZABILITY_SKEPTIC.md  LAUNCH_DEFENSE.md  RELEASE-SCOPE.md  ROADMAP_CODEX.md  SCAFFOLD_DISPATCHER_V031.md  THRESHOLD-AUDIT.md  claude-code-memory-demo.md  scaffold.md
docs/internal/: FLAGSHIP-PAPER-DRAFT.md  HANDOFF.md  PUBLISH-PLAN-20260425.md
experiments/: DECISIONS.md  E1-decisions.md
experiments/E1-synthesis/: adversarial-review.md  qa_eval_v3_E1_runP-v35.json  qa_eval_v3_E1_runP-v35_receipt.json  qa_eval_v3_E1_runP-v35_summary.json  receipt.md
experiments/E2-gpt4o/: adversarial-review.md  qa_eval_v3_E2_runP-v35.json  qa_eval_v3_E2_runP-v35_receipt.json  qa_eval_v3_E2_runP-v35_summary.json  receipt.md  write_receipt_md.py
experiments/E3-langstate/: PLAN.md
experiments/E3-temporal-fix/: PLAN.md
experiments/E4-qtypes/: PLAN.md
experiments/zeroLLM-FLAGSHIP-evidence/: F1-smoke-scaffold.json  F1B-smoke-baseline-TR-only.json  F1B-smoke-baseline-partial.json  F2-FULL-scaffold.json  SUMMARY.json
src/cogito/: __init__.py  cli.py  config.py  ingest_claude_sessions.py  recall.py  recall_b.py  recall_hybrid.py  recall_sessions.py  seed.py  server.py  telemetry.py
src/fidelis/: __init__.py  augment.py  calibrate.py  cli.py  init_cmd.py  lpci.py  mcp_cmd.py  mcp_server.py  recall_b.py  recall_hybrid.py  scaffold_server.py  server.py  snapshot.py  watch_cmd.py
src/fidelis/scaffold/: __init__.py  _core.py  preflight.py
tests/: test_graceful_degrade_corruption.py  test_recall_hybrid.py  test_session_memory.py  test_smoke.py  test_telemetry.py  test_verify_guard.py  test_zero_llm_regression.py
tests/scaffold/: test_anthropic_cache_wire.py  test_backend_portability.py  test_consumer_surface.py  test_openai_format_compatibility.py  test_real_tokenizer.py  test_scaffold_core.py  test_scaffold_graceful_degrade.py  test_streaming_marker_integrity.py  test_top_score_contract.py
