[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fidelis"
version = "0.0.6"
description = "Faithful agent memory — zero-LLM retrieval default (83.2% R@1 on LongMemEval_S, $0/query, fully local), integer-pointer fidelity on the optional LLM tier. By Hermes Labs."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [
  { name = "Hermes Labs", email = "roli@hermes-labs.ai" },
]
keywords = [
  "ai", "agents", "memory", "rag", "retrieval", "llm",
  "mem0", "agent", "zer0dex", "integer-pointer", "fidelity",
  "vector-store", "chromadb", "ollama",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Programming Language :: Python :: 3",
]
dependencies = [
  "mem0ai>=1.0.5",
  "chromadb>=0.5.0",
]

[project.optional-dependencies]
ollama = []  # no extra deps — Ollama runs locally
hybrid = ["bm25s>=0.2"]  # BM25 fusion for recall_hybrid; degrades gracefully if absent
dev = ["pytest", "pytest-asyncio", "httpx", "ruff"]

[project.scripts]
fidelis = "fidelis.cli:main"
fidelis-server = "fidelis.server:main"
fidelis-lpci-server = "fidelis.scaffold_server:main"

[project.urls]
Homepage = "https://hermes-labs.ai"
Repository = "https://github.com/hermes-labs-ai/fidelis"
Documentation = "https://github.com/hermes-labs-ai/fidelis#readme"
Issues = "https://github.com/hermes-labs-ai/fidelis/issues"
Changelog = "https://github.com/hermes-labs-ai/fidelis/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["src/fidelis"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
